--- a/CTEP/Views/Home/Index.cshtml
+++ b/CTEP/Views/Home/Index.cshtml
@@ -56,42 +56,45 @@
 
             <li class="list-group-item list-group-item-light">
                 <dl>
-                    <dt><a href="" target="_blank">判</a></dt>
-                    <dd>-您在 -"判"-这里 可以看到您想要做出的评价，并提交评价.</dd>
+                    <dt><a href="../Home/Evalution" target="_blank">判</a></dt>
+                    <dd>-IF 您是学生 您要评价课程 请点 [<a href="../Home/Evalution" target="_blank">判</a>]</dd>
+
+                    <dd>-IF 您是老师 -"<a href="../Home/Evalution" target="_blank">判</a>"- 这里可以发布您的课程 </dd>
                 </dl>
             </li>
             <li class="list-group-item list-group-item-light">
                 <dl>
 
                     <dt>
-                        <a href="" target="_blank">观</a>
+                        <a href="../Home/Histroy" target="_blank">观</a>
                     </dt>
-                    <dd>-您在 -"观"-这里 可以看到您已经提交的评价，并修改评价.</dd>
+                    <dd>-若 您是学生想要看到已经提交的评价，并修改评价  请点 [<a href="../Home/Histroy" target="_blank">观</a>]</dd>
+                    <dd>-若 您在老师  -"<a href="../Home/Histroy" target="_blank">观</a>"-这里 您可以看到您的评价数据图 来分析您的教学质量.</dd>
                 </dl>
             </li>
             <li class="list-group-item list-group-item-light">
                 <dl>
                     <dt>
-                        <a href="" target="_blank">语</a>
+                        <a href="../Home/Community" target="_blank">语</a>
                     </dt>
-                    <dd>-您在 -"语"-这里 可以看到他人的评论，并发表您评论.</dd>
+                    <dd> 无论是谁-您都可以在-"<a href="../Home/Community" target="_blank">语</a>"-这里 看到他人的评论以及对课程的评价，并发表您的见解，参与讨论.</dd>
                 </dl>
             </li>
             <li class="list-group-item list-group-item-light">
                 <dl>
 
                     <dt>
-                        <a href="" target="_blank">书</a>
+                        <a href="../Home/Edit" target="_blank">撰</a>
                     </dt>
-                    <dd>-您在 -"书"-这里 可以看到和您绑定的永久和暂时评价对象，并修改它.</dd>
+                    <dd>-您在 -"<a href="../Home/Edit" target="_blank">撰</a>"-这里 可以看到和修改个人的信息，及和您绑定的永久和暂时评价对象.</dd>
                 </dl>
             </li>
             <li class="list-group-item list-group-item-light">
                 <dl>
                     <dt>
-                        <a href="" target="_blank">入</a>
+                        <a href="../Home/Register" target="_blank">入</a>
                     </dt>
-                    <dd>-您在 -"入"-这里在这里您可以加入我们申请您的账户，更重要的是这是您登陆的入口.</dd>
+                    <dd>-您在 -"<a href="../Home/Register" target="_blank">入</a>"-这里在这里您可以加入我们，申请您的账户，更重要的是这是您登陆的入口.</dd>
                 </dl>
             </li>
         </ul>
