--- a/CTEP/Views/Shared/_LayoutUser.cshtml
+++ b/CTEP/Views/Shared/_LayoutUser.cshtml
@@ -95,7 +95,7 @@
                 </li>
 
                 <li>
-                    <a href="@Url.RouteUrl(new { Control="Home",Action="Login"})" target="_blank">
+                    <a href="../Home/Register" target="_blank">
                         <p align="center">
                             <span>
                                 <img src="../Content/images/register.png" class=" img-thumbnail img-fluid" width="32px" />
@@ -136,7 +136,7 @@
 
     <nav class="nav justify-content-center navbar-light  ">
         <span class="">
-            <svg class="icon-sm" aria-hidden="true">
+            <svg class="icon-sm layui-anim layui-anim-rotate layui-anim-loop" aria-hidden="true">
                 <use xlink:href="#icon-quanzi3"></use>
             </svg>
         </span>
@@ -148,7 +148,7 @@
             <li class="nav-item">
 
                 <a class="nav-link text-secondary" href="@Url.RouteUrl(new { Control="Home",Action="Contact"})">
-                    <svg class="icon-xsm" aria-hidden="true">
+                    <svg class="icon-xsm layui-anim layui-anim-rotate" aria-hidden="true">
                         <use xlink:href="#icon-quanzi2"></use>
                     </svg>
                     关于我
@@ -159,7 +159,7 @@
             <li class="nav-item">
                 
                 <a class="nav-link text-secondary" target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=_p_XmJuVmJuVl5uTlrqclYKXm5OW1JmVlw" style="text-decoration:none;">
-                    <svg class="icon-xsm" aria-hidden="true">
+                    <svg class="icon-xsm layui-anim layui-anim-rotate" aria-hidden="true">
                         <use xlink:href="#icon-bianji2"></use>
                     </svg>
                 反馈
